@@ -54,7 +54,10 @@ import query
 server = sapi.AspServer(Server, Request, Response, Application)
 try:
   cfg = viewvc.load_config(CONF_PATHNAME, server)
-  query.main(server, cfg, "viewvc.asp")
+  viewvc_base_url = cfg.query.viewvc_base_url
+  if viewvc_base_url is None:
+    viewvc_base_url = "viewvc.asp"
+  query.main(server, cfg, viewvc_base_url)
 finally:
   s.close()
 
