@@ -45,7 +45,10 @@ from flup.server import fcgi
 def application(environ, start_response):
   server = sapi.WsgiServer(environ, start_response)
   cfg = viewvc.load_config(CONF_PATHNAME, server)
-  query.main(server, cfg, "viewvc.fcgi")
+  viewvc_base_url = cfg.query.viewvc_base_url
+  if viewvc_base_url is None:
+    viewvc_base_url = "viewvc.fcgi"
+  query.main(server, cfg, viewvc_base_url)
   return []
 
 fcgi.WSGIServer(application).run()
