@@ -10,6 +10,8 @@ Version 1.1.7 (released ??-???-????)
   * use svn:mime-type property charset param as encoding hint
   * markup Subversion revision references in log messages (issue #313)
   * add rudimentary support for FastCGI-based deployments (issue #464)
+  * fix query script WSGI deployment
+  * add configuration to fix query script cross-linking to ViewVC
 
 Version 1.1.6 (released 02-Jun-2010)
 
